<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/transparent_black"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_marginTop="42sp"
    android:layout_marginBottom="52sp"
    android:paddingTop="12sp"
    android:paddingBottom="12sp"
    android:paddingStart="20sp"
    android:paddingEnd="20sp"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0sp"
            android:layout_weight="10">
            <TextView
                android:id="@+id/dialog_const_introduction"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textSize="30sp"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/introduction_headline_main"/>

        </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:background="@color/quiz_2"
        android:layout_weight="1">
        </LinearLayout>


    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:layout_weight="13">
        <LinearLayout
            android:layout_width="0sp"
            android:layout_weight="80"
            android:layout_height="fill_parent">
            <TextView
                android:layout_width="fill_parent"
                android:id="@+id/dialog_headline"
                android:layout_height="fill_parent"
                android:textSize="18sp"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:gravity="start|center"
                android:text="@string/introduction_headline_abstract"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0sp"
            android:layout_weight="20"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/dialog_site"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textSize="18sp"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:gravity="center|end"/>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:gravity="top"
        android:layout_weight="73"
        >
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"

            >
        <TextView
            android:id="@+id/dialog_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#FFF"
            android:textStyle="bold"
            android:enabled="false"

            android:text="@string/introduction_text_abstract"
            android:layout_gravity="top|start"
            android:gravity="start"
            />
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:background="@color/transparent"
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:layout_weight="3">
    </LinearLayout>
    <LinearLayout
        android:baselineAligned="false"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:layout_height="0sp"
        android:layout_weight="10">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0sp"
            android:layout_weight="42"
            android:layout_height="fill_parent">
        <Button
            android:id="@+id/btn_dialogBack"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/back"
            android:background="@color/gray"
            android:textStyle="bold"
            />
            </LinearLayout>
        <LinearLayout
            android:background="@color/transparent"
            android:orientation="horizontal"
            android:layout_width="0sp"
            android:layout_weight="6"
            android:layout_height="fill_parent"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0sp"
            android:layout_weight="42"
            android:layout_height="fill_parent">
        <Button
            android:id="@+id/btn_dialogForward"
            android:layout_width="0sp"
            android:layout_weight="10"
            android:layout_height="wrap_content"
            android:text="@string/forward"
            android:background="@color/gray"
            android:textStyle="bold"
            />
            </LinearLayout>
    </LinearLayout>

        <LinearLayout
            android:background="@color/transparent"
            android:layout_width="fill_parent"
            android:layout_height="0sp"
            android:layout_weight="3">
        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0sp"
        android:layout_weight="15">

        <Button
            android:id="@+id/btn_dialogClose"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:background="@color/gray"
            android:textStyle="bold"
            />

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>