<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/transparent_black"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp">
        <LinearLayout
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp">

            <LinearLayout
                android:background="@color/transparent"
                android:orientation="horizontal"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="5"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="20">
                <TextView
                    android:id="@+id/dialog_const_nickname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp"
                    android:textColor="#FFF"
                    android:textStyle="bold"
                    android:text="@string/name"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="60">
                <EditText
                    android:id="@+id/dialog_et_nickname"
                    android:labelFor="@id/dialog_et_nickname"
                    android:hint="@string/nickname"
                    android:textColor="@color/black"
                    android:layout_width="fill_parent"
                    android:textSize="16sp"
                    android:maxLength="12"
                    android:background="@color/lightgray"
                    android:layout_height="fill_parent" />

            </LinearLayout>
            <LinearLayout
                android:background="@color/transparent"
                android:orientation="horizontal"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="5"/>
        </LinearLayout>


        <LinearLayout
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp">

            <LinearLayout
                android:background="@color/transparent"
                android:orientation="horizontal"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="5"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="30">
                <TextView
                    android:id="@+id/dialog_const_male"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:textColor="#FFF"
                    android:textStyle="bold"
                    android:gravity="end"
                    android:paddingStart="0sp"
                    android:paddingEnd="3sp"
                    android:text="@string/male"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="30">
                <Switch
                    android:id="@+id/dialog_tb_sex"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:thumb="@drawable/switch_thumb"
                    android:track="@drawable/switch_bg"
                    android:textOn=""
                    android:textOff=""/>

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="30">
                <TextView
                    android:id="@+id/dialog_const_female"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginBottom="10sp"
                    android:textColor="#FFF"
                    android:textStyle="bold"
                    android:gravity="start"
                    android:paddingStart="3sp"
                    android:paddingEnd="0sp"
                    android:text="@string/female"/>
            </LinearLayout>
            <LinearLayout
                android:background="@color/transparent"
                android:orientation="horizontal"
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="5"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_dialogSave"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:background="@color/gray"
            android:textStyle="bold"
            android:layout_marginTop="42sp"
            android:layout_marginBottom="5sp"
            android:layout_marginEnd="10sp"
            android:layout_marginStart="10sp"
            />

        <Button
            android:id="@+id/btn_dialogAbort"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/abort"
            android:background="@color/gray"
            android:textStyle="bold"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:layout_marginEnd="10sp"
            android:layout_marginStart="10sp"
            />
    </LinearLayout>
</RelativeLayout>