<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="de.reimund_koenig.arduinotrivia.PlayFragment">

<Button
    android:id="@+id/btn_startQuizGame"
    android:background="@color/quiz_1"
    android:textColor="@color/black"
    android:textStyle="bold"
    android:layout_width="fill_parent"
    android:text="@string/start_game"
    android:visibility="gone"
    android:layout_height="fill_parent"/>

    <LinearLayout
        android:id="@+id/ll_quizGame"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

    <LinearLayout
        android:baselineAligned="false"
        android:background="@color/transparent"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="4">
        <LinearLayout
            android:background="@color/transparent"
            android:orientation="horizontal"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </LinearLayout>
        <LinearLayout
            android:background="@color/transparent"
            android:orientation="horizontal"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="8">

            <TextView
                android:id="@+id/tv_chat_msg_incoming"
                android:text="@string/msg_incoming"
                android:layout_gravity="bottom"
                android:background="@color/yellow"
                android:gravity="start|bottom"
                android:textStyle="bold"
                android:textSize="12sp"
                android:visibility="gone"
                android:textColor="@color/red"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:background="@color/transparent"
            android:orientation="horizontal"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:background="@color/transparent"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="46">
        <LinearLayout
            android:background="@color/transparent"
            android:orientation="horizontal"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="8">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/quiz_2">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="10">

                    <TextView
                        android:id="@+id/tv_score_text"
                        android:text="@string/num_zero"
                        android:gravity="start|center"
                        android:layout_marginStart="15sp"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"/>

                    <TextView
                        android:id="@+id/tv_score_const_text"
                        android:text="@string/score_points"
                        android:gravity="start|center"
                        android:layout_marginStart="15sp"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"/>


                    <TextView
                        android:id="@+id/tv_name_text"
                        android:text=""
                        android:gravity="end|center"
                        android:layout_marginEnd="15sp"
                        android:textStyle="bold"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"/>

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0sp"
                    android:layout_weight="90">
                    <TextView
                        android:id="@+id/tv_QuizQuestion"
                        android:text=""
                        android:gravity="center"
                        android:textStyle="bold"
                        android:textSize="22sp"
                        android:padding="10sp"
                        android:textColor="@color/white"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:background="@color/transparent"
            android:orientation="horizontal"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:background="@color/transparent"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="3"/>
    <LinearLayout
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="10">
        <LinearLayout
            android:background="@color/transparent"
            android:orientation="horizontal"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="8">
            <Button
                android:id="@+id/btn_answerA"
                android:textColor="@color/white"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/btn_answers"
                android:contentDescription="@string/layout_empty"/>
        </LinearLayout>
        <LinearLayout
            android:background="@color/transparent"
            android:orientation="horizontal"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:background="@color/transparent"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1">

    </LinearLayout>
    <LinearLayout
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="10">
        <LinearLayout
            android:background="@color/transparent"
            android:orientation="horizontal"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="8">
            <Button
                android:id="@+id/btn_answerB"
                android:textColor="@color/white"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/btn_answers"
                android:contentDescription="@string/layout_empty"/>
        </LinearLayout>
        <LinearLayout
            android:background="@color/transparent"
            android:orientation="horizontal"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:background="@color/transparent"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1">

    </LinearLayout>
    <LinearLayout
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="10">
        <LinearLayout
            android:background="@color/transparent"
            android:orientation="horizontal"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="8">
            <Button
                android:id="@+id/btn_answerC"
                android:textColor="@color/white"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/btn_answers"
                android:contentDescription="@string/layout_empty"/>
        </LinearLayout>
        <LinearLayout
            android:background="@color/transparent"
            android:orientation="horizontal"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:background="@color/transparent"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1">

    </LinearLayout>
    <LinearLayout
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="10">
        <LinearLayout
            android:background="@color/transparent"
            android:orientation="horizontal"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="8">
            <Button
                android:id="@+id/btn_answerD"
                android:textColor="@color/white"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/btn_answers"
                android:contentDescription="@string/layout_empty"/>
        </LinearLayout>
        <LinearLayout
            android:background="@color/transparent"
            android:orientation="horizontal"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:background="@color/transparent"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="4">

    </LinearLayout>
    </LinearLayout>

</FrameLayout>
